Fix for issue: Scrollbar is displayed for the labels with 100% width and p/h1-h6 classes

--- a/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
+++ b/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
@@ -1411,6 +1411,10 @@ body {
   .p {
     width: 100%;
     color: inherit;
+    word-wrap: break-word;
+  }
+  .h1,.h2,.h3,.h4,.h5,.h6 {
+    word-wrap: break-word;
   }
   // (Reduce width by left and right margin) Fix for horizontal scroll in android devices
   .app-card {
